# e-clinic

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml  requirements.txt  tailwind.config.js
src/: db.sqlite3  manage.py
src/Dashboard/: admin.py  decorators.py  forms.py  models.py  urls.py
src/Dashboard/management/commands/: populatedb.py
src/Dashboard/migrations/: 0001_initial.py
src/Dashboard/static/css/compiled/: compiled.css
src/Dashboard/static/js/: init-theme.js  set-dark-theme.js  set-light-theme.js
src/Dashboard/templates/components/: navbar-dashboard.html  navbar-simple.html
src/Dashboard/templates/layouts/: base.html  dashboard.html
src/Dashboard/templates/pages/appointment/: add-appointment.html  appointment-list-medical-staff.html  appointment-list-patient.html  edit-appointment.html
src/Dashboard/templates/pages/auth/: add-user.html  edit-user.html  sign-in.html  user-list.html
src/Dashboard/templates/pages/department/: add-department.html  department-list.html  edit-department.html
src/Dashboard/templates/pages/medical-history/: edit-medical-history.html
src/Dashboard/templates/pages/medical-staff/: add-medical-staff.html  edit-medical-staff.html  medical-staff-list.html
src/Dashboard/templates/pages/patient/: add-patient.html  edit-patient.html  patient-list.html
src/Dashboard/views/: appointement.py  auth.py  department.py  medicalHistory.py  medicalStaff.py  patient.py  prescription.py  presentation.py  procedure.py  procedureApplication.py  speciality.py
src/EClinic/: .env  asgi.py  settings.py  urls.py  wsgi.py
(+11 files in other folders)
