[tool.poetry]
name = "e-clinic"
version = "1.0.0"
description = "A medical management system"
authors = ["Debbal Lotfi <debbal.lotfi.dev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
