[tool.poetry]
name = "e-clinic"
version = "1.0.0"
description = "A medical management system"
authors = ["Debbal Lotfi <debbal.lotfi.dev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
django-widget-tweaks = "^1.5.0"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
